--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.6",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.4",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.10",
     "inngest": "^3.30.0",
+    "isomorphic-dompurify": "^2.26.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
